@@ -4,11 +4,83 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cl.cavallinux</groupId>
 	<artifactId>jisocreator</artifactId>
-	<version>0.2.0</version>
+	<version>0.2.1</version>
 	<name>JisoCreator</name>
 	<description>MKISOFS Frontend</description>
 
 	<profiles>
+		<profile>
+			<id>applesilicon</id>
+			<properties>
+				<swt.platform>cocoa.macosx.aarch64</swt.platform>
+				<swt.platform.toexclude.name>org.eclipse.swt.gtk.linux.x86_64</swt.platform.toexclude.name>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>org.eclipse.platform</groupId>
+					<artifactId>${swt.platform.name}</artifactId>
+					<version>${swt.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.eclipse.platform</groupId>
+					<artifactId>org.eclipse.swt</artifactId>
+					<version>${swt.version}</version>
+					<exclusions>
+						<exclusion>
+							<groupId>org.eclipse.platform</groupId>
+							<artifactId>${swt.platform.toexclude.name}</artifactId>
+						</exclusion>
+					</exclusions>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>applesilicon-cmdlinemode</id>
+			<properties>
+				<swt.platform>cocoa.macosx.aarch64</swt.platform>
+				<swt.platform.toexclude.name>org.eclipse.swt.gtk.linux.x86_64</swt.platform.toexclude.name>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>org.eclipse.platform</groupId>
+					<artifactId>${swt.platform.name}</artifactId>
+					<version>${swt.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.eclipse.platform</groupId>
+					<artifactId>org.eclipse.swt</artifactId>
+					<version>${swt.version}</version>
+					<exclusions>
+						<exclusion>
+							<groupId>org.eclipse.platform</groupId>
+							<artifactId>${swt.platform.toexclude.name}</artifactId>
+						</exclusion>
+					</exclusions>
+				</dependency>
+			</dependencies>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>exec-maven-plugin</artifactId>
+						<version>${exec.maven.plugin}</version>
+						<configuration>
+							<executable>java</executable>
+							<arguments>
+								<argument>--add-opens</argument>
+								<argument>java.base/java.util=ALL-UNNAMED</argument>
+								<argument>${debug.jvm.args}</argument>
+								<argument>${jvm.nativeacess.arg}</argument>
+								<argument>-jar</argument>
+								<argument>
+									${project.build.directory}/${project.artifactId}.jar</argument>
+								<argument>-h</argument>
+							</arguments>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 		<profile>
 			<id>linux</id>
 			<activation>
@@ -288,6 +360,7 @@
 						<include>**/*Test.java</include>
 						<include>**/*Tests.java</include>
 					</includes>
+					<argLine>-XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
